[package]
name = "gru-misc"
version = "0.1.0"
authors = ["Jannik Fehre", "Fabian Osyguß"]
license = "MIT"
edition = "2021"

[features]
math = ["static_assertions"]
text_rast = ["ab_glyph", "ahash"]
text_sdf = ["easy-signed-distance-field", "ahash"]
thread = ["flume"]
time = ["spin_sleep"]
rand = ["rand_raw", "rand_xoshiro", "rand_distr"]
color = []
serde_impl = ["serde", "ahash/serde", "rand_xoshiro/serde1"]

[dependencies]
# math
static_assertions = { version = "1.1.0", optional = true }
# text_rast
ab_glyph = { version = "0.2.21", optional = true }
# text_sdf
easy-signed-distance-field = { version = "0.1.1", features = ["font"], optional = true }
# text
ahash = { version = "0.8.11", optional = true }
# thread
flume = { version = "0.10.14", default-features = false, optional = true }
# time
spin_sleep = { version = "1.1.1", optional = true }
# rand
rand_raw = { package = "rand", version = "0.8.5", default-features = false, features = ["getrandom"], optional = true }
rand_xoshiro = { version = "0.6.0", optional = true }
rand_distr = { version = "0.4.3", default-features = false, features = ["std_math"], optional = true }
# serde_impl
serde = { version = "1.0.164", default-features = false, features = ["derive", "std"], optional = true }

[dev-dependencies]
image = { version = "0.24.6", default-features = false, features = ["png"] }

[package.metadata.docs.rs]
all-features = true
