[workspace]
members = ["file-tree-derive"]

[package]
name = "gru-misc"
version = "0.1.0"
authors = ["Jannik Fehre", "Fabian Osyguß"]
license = "MIT"
edition = "2024"

[features]
math = ["static_assertions"]
marching_cubes = ["math", "ahash"]
text_rast = ["ab_glyph", "ahash"]
text_sdf = ["easy-signed-distance-field", "ahash"]
thread = ["flume"]
futures = ["pin-project"]
time = ["spin_sleep"]
rand = ["dep:rand", "getrandom", "rand_xoshiro", "rand_distr"]
color = []
jpg = ["zune-jpeg"]
png = ["zune-png"]
gltf = ["math", "dep:gltf"]
file_tree = ["file-tree-derive"]
serde_impl = ["serde", "ahash/serde", "rand_xoshiro/serde1"]

[dependencies]
# math
static_assertions = { version = "1.1.0", optional = true }
# marching cubes & text
ahash = { version = "0.8.11", default-features = false, features = ["no-rng", "std"], optional = true }
# text_rast
ab_glyph = { version = "0.2.29", optional = true }
# text_sdf
easy-signed-distance-field = { version = "0.1.1", features = ["font"], optional = true }
# thread
flume = { version = "0.11.1", default-features = false, optional = true }
# futures
pin-project = { version = "1.1.7", optional = true }
# time
spin_sleep = { version = "1.3.0", optional = true }
# rand
rand = { version = "0.8.5", default-features = false, features = ["getrandom"], optional = true }
getrandom = { version = "0.2.15", features = ["js"], optional = true }
rand_xoshiro = { version = "0.6.0", optional = true }
rand_distr = { version = "0.4.3", default-features = false, features = ["std_math"], optional = true }
# img
zune-jpeg = { version = "0.4.14", optional = true }
zune-png = { version = "0.4.10", optional = true }
# gltf
gltf = { version = "1.4.1", default-features = false, features = ["names"], optional = true }
# file_tree
file-tree-derive = { path = "file-tree-derive", optional = true }
# serde_impl
serde = { version = "1.0.216", default-features = false, features = ["derive", "std"], optional = true }
# bytemuck
bytemuck = { version = "1.20.0", features = ["derive"], optional = true }

[dev-dependencies]
image = { version = "0.25.5", default-features = false, features = ["png"] }

[package.metadata.docs.rs]
all-features = true
